--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   permission_handler: ^10.0.0
   geolocator: ^9.0.1
   geocoding: ^2.0.4
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
